# nctasks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
docs/superpowers/plans/: 2026-06-24-nctasks.md
docs/superpowers/specs/: 2026-06-17-nctasks-design.md
src/nctasks/: __init__.py  app.py  cli.py  db.py  editor.py
src/nctasks/screens/: __init__.py  conflict.py  group_select.py  task_list.py
tests/: test_db.py  test_editor.py
